--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
     id 'java'
     id 'application'
     id 'com.google.protobuf' version '0.8.12'
-    id 'maven-publish'
 }
 
 repositories {
@@ -21,14 +20,10 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.8.0'
 }
 
-group = 'com.mycompany'
-version = '1.0-SNAPSHOT'
-sourceCompatibility = '1.11'
-
-publishing {
-    publications {
-        maven(MavenPublication) {
-            from(components.java)
+sourceSets {
+    main {
+        java {
+            srcDirs 'build/generated/source/proto/main/java'
         }
     }
 }
@@ -38,3 +33,6 @@ tasks.withType(JavaCompile) {
 }
 
 mainClassName = 'ArtemisHelloWorld'
+group = 'com.mycompany'
+version = '1.0-SNAPSHOT'
+sourceCompatibility = '1.11'
