Revised Components so they are consistent with Artemis-odb examples.

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-mainClassName = 'ArtemisHelloWorld'
+mainClassName = 'com.mycompany.artemishelloworld.ArtemisHelloWorld'
 group = 'com.mycompany'
 version = '1.0-SNAPSHOT'
 sourceCompatibility = '1.11'
