--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,15 +15,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Download protobuf
-      run: curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.11.3/protobuf-all-3.11.3.tar.gz && tar xzvf protobuf-all-3.11.3.tar.gz
-    - name: Install protobuf
-      run: cd protobuf-3.11.3 && ./configure DIST_LANG=cpp --prefix=/usr && make && sudo make install && sudo ldconfig
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
+    - name: Cache protobuf
+      id: cache-protobuf
+      uses: actions/cache@v2
+      with:
+          path: protobuf-3.11.3
+          key: ${ runner.os }}-protobuf
+    - name: Build protobuf
+      if: steps.cache-protobuf.outputs.cache-hit != 'true'
+      run: |
+        curl -OL https://github.com/protocolbuffers/protobuf/releases/download/v3.11.3/protobuf-all-3.11.3.tar.gz
+        tar xzvf protobuf-all-3.11.3.tar.gz
+        cd protobuf-3.11.3 
+        ./configure DIST_LANG=cpp --prefix=/usr
+        make
+        sudo make install
+        
+    - name: Install protobuf
+      run: |
+        cd protobuf-3.11.3
+        sudo make instal
+        sudo ldconfig
+    
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: 1.11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
