Adjusted action to   * Cache protobuf   * Use Java JDK 1.11 vice 1.8
Conflicts:
	.github/workflows/gradle.yml

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Install protobuf
       run: |
         cd protobuf-3.11.3
-        sudo make instal
+        sudo make install
         sudo ldconfig
     
     - uses: actions/checkout@v2
