--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install protobuf
       run: |
-        sudo snap install protobuf
+        sudo snap install protobuf --classic
     
     - uses: actions/checkout@v2
     - name: Set up JDK 1.11
